# projet-cmi

./: .atom-build.json  .gitattributes  .gitignore  CMakeLists.txt  FindSFML.cmake  Makefile  README.md  ball.cpp  ball.hpp  block.cpp  block.cpp~  block.hpp  block.hpp~  engine.cpp  engine.hpp  main.cpp  object.cpp  object.hpp  physics_object.cpp  physics_object.hpp  state.hpp
cmake/: FindSFGUI.cmake  skizzle.desktop
docs/: Instructions  format-sauvegarde-niveaux
docs/comptes-rendus/: 01-04-16.md  04-03-16.md
docs/diagrammes/classes/: classes.fdb_latexmk  classes.fls  classes.tex
docs/diagrammes/repartition/: repartition.fdb_latexmk  repartition.fls  repartition.tex
docs/guides/: compilation-linux.md
docs/nouveau-diagramme-classe/: diagramme.fdb_latexmk  diagramme.fls
docs/rapports/comptes-rendus/: 11-03-16.md  18-03-16.md  25-03-16.md
docs/rapports/rapport-final/: Rapport_projet.tex  rapport.bib  rapport.tex
docs/rapports/rapport-final/figures/: analyse-uml-level.tex  analyse-uml-state.tex  analyse-uml.tex  organisation-gantt.tex
docs/rapports/rapport-final/parts/: analyse.tex  conclu.tex  develop.tex  intro.tex  manuel.tex  organisation.tex
docs/rapports/rapport-initial-delabre/: rapport.aux  rapport.bbl  rapport.bib  rapport.blg  rapport.fdb_latexmk  rapport.fls  rapport.out  rapport.tex  rapport.toc
docs/rapports/rapport-initial-delabre/figures/: go-ex-1.tex  go-ex-2.tex  go-gantt.tex  life-ex-1.tex  life-ex-2.tex  life-ex-3.tex  life-gantt.tex  ptf-gantt.tex  ptf-layering-exploded.tex  ptf-layering-merged.tex  ptf-uml-diagram.tex
docs/rapports/rapport-initial-delabre/parts/: cmp.aux  cmp.tex  conclu.aux  conclu.tex  go.aux  go.tex  intro.aux  intro.tex  life.aux  life.tex  ptf.aux  ptf.tex
include/: ball.hpp  block.hpp  collision.hpp  collision_data.hpp  constants.hpp  editor.hpp  engine.hpp  engine_state.hpp  finish_block.hpp  game.hpp  gravity_block.hpp  kill_block.hpp  level.hpp  lvl_menu.hpp  manager.hpp  menu.hpp  object.hpp  object_button.hpp  physics_object.hpp  player.hpp  resource_manager.hpp  rules.hpp  state.hpp  switch_block.hpp  toolbar.hpp  utility.hpp  view.hpp  widget_button.hpp  widget_timer.hpp  widget_toolbar.hpp
include/gui/: action_toolbar.hpp  icon_radio_button.hpp  modal.hpp  object_button.hpp  object_toolbar.hpp  toolbar.hpp
include/objects/: block.hpp  collision.hpp  finish_block.hpp  geometry.hpp  gravity_block.hpp  kill_block.hpp  object.hpp  player.hpp  switch_block.hpp
include/states/: editor.hpp  game.hpp  level.hpp  menu.hpp  rules.hpp  state.hpp
include/util/: widget_button.hpp  widget_selector.hpp  widget_timer.hpp
res/: background.tga  block.tga  gravity_block_east.tga  gravity_block_west.tga  gui.theme
res/images/: arrow_down.tga  back.tga  block.tga  finish_block.tga  music.tga  no_music.tga  pause.tga  player.tga  restart.tga  switch_block.tga
res/textures/: death_block.tga  finish_block.tga  gravity_block_east.tga  gravity_block_north.tga  gravity_block_south.tga  gravity_block_west.tga  menu.tga  movable_block.tga  player.tga  rules.tga  slow_block.tga  switch_block.tga  toolbar_block.tga  toolbar_finish_block.tga  toolbar_gravity_block_east.tga  toolbar_gravity_block_north.tga  toolbar_gravity_block_south.tga  toolbar_gravity_block_west.tga  toolbar_kill_block.tga  toolbar_movable_block.tga  toolbar_player.tga  toolbar_switch_block.tga
res/textures/levels/: background.tga
res/textures/objects/: block.tga  block_select.tga  finish_block.tga  gravity_block_west.tga  kill_block.tga  player_1.tga  player_2.tga  player_shadow.tga  selected_block.tga  selected_movable_block.tga  switch_block.tga
res/textures/toolbar/: gravity_block_east.tga  icon_arrow_up.tga  icon_gear.tga  icon_save.tga  icon_test.tga
src/: ball.cpp  block.cpp  collision.cpp  editor.cpp  engine.cpp  finish_block.cpp  game.cpp  gravity_block.cpp  kill_block.cpp  level.cpp  lvl_menu.cpp  main.cpp  manager.cpp  menu.cpp  object.cpp  object_button.cpp  physics_object.cpp  player.cpp  resource_manager.cpp  rules.cpp  state.cpp  switch_block.cpp  toolbar.cpp  utility.cpp  view.cpp  widget_button.cpp  widget_selector.cpp  widget_timer.cpp  widget_toolbar.cpp
src/gui/: action_toolbar.cpp  icon_radio_button.cpp  modal.cpp  object_button.cpp  object_toolbar.cpp  toolbar.cpp
src/objects/: block.cpp  collision.cpp  finish_block.cpp  geometry.cpp  gravity_block.cpp  kill_block.cpp  object.cpp  player.cpp  switch_block.cpp
src/states/: editor.cpp  game.cpp  level.cpp  menu.cpp  rules.cpp  state.cpp
src/util/: widget_button.cpp  widget_selector.cpp  widget_timer.cpp
